--- a/_site.yml
+++ b/_site.yml
@@ -79,6 +79,8 @@ navbar:
           href: assignments-03.html
         - text: "Assignment 4"
           href: assignments-04.html
+        - text: "Assignment 5"
+          href: assignments-05.html
     - text: "Reference"
       href: reference.html
 output: distill::distill_article
